Rework layout to use z-index instead of translateZ [Chrome fix]

--- a/src/components/3D/MainScene.module.css
+++ b/src/components/3D/MainScene.module.css
@@ -1,18 +1,14 @@
 .scene {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
+    position: relative;
     display: flex;
+    z-index: 0;
 }
 
-.scene > canvas {
-    width: 100vw;
-    height: 100vh;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+.scene canvas {
+    position: fixed;
+    height: 100%;
+    width: 100%;
+    left: 0;
+    top: 0;
     z-index: 1;
 }
